# tpmp-gr10b-lab4-sashkapro_18_tushitel

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
includes/: db_utils.hpp  image_utils.hpp  main_utils.hpp
src/: auth.cpp  db_utils.cpp  image_utils.cpp  main.cpp  main_utils.cpp
tests/: test_db_utils.cpp  test_image_utils.cpp  test_main.cpp
